--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,13 @@ services:
     labels:
       io.balena.features.balena-api: "1"
       io.balena.features.supervisor-api: 1
+      
+   upnp:
+    build: ./plugins/upnp
+    restart: on-failure
+    network_mode: host
+    ports:
+      - 49494:49494
 
   multiroom-server:
     build: ./core/multiroom/server
